Another try to resolve cors